--- a/bbscheduler.tex
+++ b/bbscheduler.tex
@@ -481,7 +481,9 @@ together further improve average system throughput by 62.31\%.
 
 \input{model}
 
-\input{sched_policy}
+\input{scheduler}
+
+\input{optimization}
 
 \input{simulation}
 
