--- a/optimization.tex
+++ b/optimization.tex
@@ -1,83 +1,3 @@
-\section{Cerberus and Optimization Enhancement}
-\label{Sec:Scheduler}
-
-\begin{figure}[!htbp]
-        \centering
-        \includegraphics[width=3.6in]{CerberusBBSystem}
-        \caption{Scheduling Workflow of Burst Buffer Aware Cerberus}
-        \label{Fig:CerberusQueues}
-\end{figure}
-
-%=======XY======
-The traditional batch scheduler on system without burst buffer only
-takes job size (required number of nodes) and expected runtime into scheduling decision making. 
-The most commonly used scheduling policy are First Come First Serve with EASY backfilling~\cite{tsafrir-tpds-2007}.
-However, on burst buffer enabled systems, 
-the available amount of burst buffer capacity becomes the new scheduling constraint. 
-Thus, we propose Cerberus, 
-the batch scheduler with burst buffer awareness for 3-phase modeled jobs. 
-
-% \subsection{Cerberus for 3-Phase Jobs}
-% Traditional batch scheduler usually looks at the field of $c_i$ and $rt_i$
-% when making scheduling decision.
-% One straightforward way to make decisions on non-burst-buffer HPC system is
-% First Come First Serve, as long as available compute nodes can satisfy user job.
-% Once the system is equipped with burst buffer, scheduler must consider a new constraint:
-% the available amount of burst buffer capacity.
-% Scheduling is divided into 3 phases to
-% adopt to the 3-phase characteristic of jobs in burst buffer context.
-% As shown in Figure~\ref{Fig:CerberusQueues},
-% Cerberus schedules jobs in 3 distinct set/queue.
-% The input queue $Q_I$ contains all the jobs that
-% needs to load input data before they are able to execute.
-% Once a job comes out of input queue, its data flows from external disk
-% to burst buffer nodes, indicated by the red arrow.
-% Compute nodes are not allocated to the application until
-% data flows from burst buffer to memory on compute nodes.
-% The run queue $Q_R$ contains all the jobs waiting to be run with loaded data.
-% Before executing, input data must be transfered to memory on compute nodes,
-% after which burst buffer used for stage-in can be released.
-% When running application request checkpointing, its execution and data are
-% pushed to its exclusive burst buffer nodes;
-% when application resume from system fault, its checkpointing are
-% loaded directly from burst buffer, instead of PFS, to compute nodes.
-% The output queue $Q_O$ contains all the jobs that
-% terminate execution but needs to write output data to external storage.
-% As soon as output data is moved from memory to burst buffer nodes allocated for stage-out,
-% compute nodes can be released;
-% in other words, other applications ready to run can take up them now.
-% At anytime, a job can only appear in one of the 3 sets, apparently.
-% This fact motivates separated scheduling idiom to be used in different phases,
-% or for different job queues.
-
-%==================XY==============================
-\subsection{Cerberus Overview}
-As shown in Figure~\ref{Fig:CerberusQueues},
-the input queue $Q_I$ contains all the jobs that
-needs to pre-fetch data from external storage to burst buffer.
-When the data flows from external disk
-to burst buffer nodes, indicated by the red arrow, the job enters the run queue $Q_R$, 
-waiting for compute nodes to be allocated.
-Once the job gets the required number of compute nodes, it can start to run.
-There might be frequent data exchange between burst buffer and compute nodes during the running phase. 
-The job enters the output queue $Q_O$ after finishing computation, 
-and waits for its output data being drained out to external storage. 
-
-There could be multiple jobs waiting in each queue at the same time. 
-Cerberus schedules the jobs in each queue separately, 
-rather than being held in a particular queue and waiting for certain resources.
-Cerberus can deploy different optimization algorithms for making scheduling decision
-for jobs waiting in each queue.
-We choose a heuristic strategy to determine the scheduling order when
-Cerberus has to schedule multiple queues at the same time.
-Noticing that jobs finishing \textit{running} and \textit{stage-out} phase
-will fully or partially release taken resources,
-we set the priority of queues to be $Q_O > Q_R > Q_I$.
-This greedy heuristic works well when the demand of jobs in $J_{Q_I}$ is low.
-However, it is possible to make jobs stacking up at the entry of the system.
-We plan to investigate more on this problem in the future.
-
-
 % \subsection{Optimize Stage-in Phase}
 % In the stage-in phase, only burst buffer demand is considered.
 % Scheduling is made based on the value of $bb\_in$ of jobs in $Q_I$.
@@ -106,31 +26,45 @@ We plan to investigate more on this problem in the future.
 
 
 %==============XY====================
-\subsection{Scheduling in Stage-in Phase}
+\section{Optimization Enhancement}
+
+Cerberus can be further enhanced with different optimization algorithms when making scheduling decision
+for jobs waiting in each queue.
+
+\subsection{Scheduling Optimization in Stage-in Phase}
 
 In the stage-in phase, jobs require only for burst buffer.
 Cerberus schedule jobs in $Q_I$ based on their burst buffer demand $bb\_in$.
-With the objective of maximizing resource utilization, 
-Cerberus schedules jobs by the following optimization:
+To maximize burst buffer's utilization,
+one can schedule jobs according to the following optimization:
 \begin{align*}
-        & \max \sum_{i\in S} bb\_in_i \\
-        & s.t. \sum_{i\in S} bb\_in_i \leq BB_{available} \numberthis \label{Equ:MaxTransferData}
-        %\left\{
-                %\begin{array}{l}
-                        %S \subseteq J_{Q_I} \\ [1em]
-                        %\sum_{i\in S} bb\_in_i \leq BB_{available}
-                %\end{array} 
-        %\right.
+        \mathbf{Problem} & \text{ } \mathbf{1} \\
+        \max &\sum_{i\in J_{Q_I}} bb\_in_i \cdot x_i \\
+        s.t. &\left\{
+                \begin{array}{l}
+                        x_i \in \{0, 1\}, \forall i \in J_{Q_I}\\ [0.8em] \numberthis \label{Equ:MaxTransferData}
+                        \sum_{i \in J_{Q_I}} bb\_in_i \cdot x_i \leq BB_{available}
+                \end{array}
+        \right.
 \end{align*}
+%\begin{align*}
+        %& \max \sum_{i\in S} bb\_in_i \\
+        %& s.t. \sum_{i\in S} bb\_in_i \leq BB_{available} \numberthis \label{Equ:MaxTransferData}
+        %%\left\{
+                %%\begin{array}{l}
+                        %%S \subseteq J_{Q_I} \\ [1em]
+                        %%\sum_{i\in S} bb\_in_i \leq BB_{available}
+                %%\end{array} 
+        %%\right.
+%\end{align*}
 where $J_{Q_I}$ stands for all jobs in input queue,
-$S\subseteq J_{Q_I}$ is the set of job selected by Cerberus,
-$bb\_in_i$ is the burst buffer demand of job $j_i$,
-$BB_{available}$ is system's available amount of burst buffer.
+$\mathcal{J} = \{x_i|x_i = 1, \text{ } \forall i \in J_{Q_I}\}$ is the set of job selected by Cerberus,
+$bb\_in_i$ is the burst buffer demand of job $job_i$,
+$BB_{available}$ is system's currently available amount of burst buffer.
 
 Stage-out phase scheduling are made based on the value of $bb\_out$ of jobs in $Q_O$.
 Optimization formula for stage-out phase are almost the same as
-Equation~\ref{Equ:MaxTransferData},
-except that $bb\_in$ is replaced with $bb\_out$,
+Problem 1, except that $bb\_in$ is replaced with $bb\_out$,
 $J_{Q_I}$ is replaced with $J_{Q_O}$, the job set of output queue.
 
 
@@ -175,33 +109,48 @@ $J_{Q_I}$ is replaced with $J_{Q_O}$, the job set of output queue.
 
 
 
-\subsection{Scheduling in Running Phase}
-Running jobs require not only compute nodes, but also burst buffer to ensure performance.
-Cerberus schedules jobs in $Q_R$ based on the $c$ and $bb\_run$.
-To maximize the utilization of compute nodes and burst buffer, 
-the scheduling objective is modeled as a knapsack problem by defining the \textbf{value} of the $j_i$ as
+\subsection{Scheduling Optimization in Running Phase}
+Running jobs require not only compute nodes, but also likes to utilize burst buffer to enhance performance.
+Here we take a more general strategy.
+We define the \textbf{profit} of $job_i$ in $Q_R$ as it is using $c$ compute nodes and $bb\_run$ amount of BB
 \begin{equation}
-        v_i = \frac{c_i / CN}{ert_i} \times \frac{bb\_run_i / BB}{ert_i}
-        \label{Equ:DefValue}
+        p_i = f(c_i, bb\_run_i, ert_i)
+\label{Equ:GeneralValue}
 \end{equation}
 where $ert_i$ is the expected running time of $j_i$.
-By defining \textit{value} as Equation~\ref{Equ:DefValue},
-we prefer these tasks that claims to take up node resources with short duration.
-The optimizing formula can thus be
+Then the objective is to maximize the total profit of jobs in running queue, formularized as
 \begin{align*}
-        & \max \sum_{i \in S}\frac{c_i}{ert_i} * \frac{bb\_run_i}{ert_i} \\
-        & s.t. \left\{
+        \mathbf{Problem} & \text{ } \mathbf{2} \\
+        \max &\sum_{i \in J_{Q_R}} p_i \cdot x_i \\
+        s.t. &\left\{
                 \begin{array}{l}
-                        %S \subseteq J_{Q_R} \\ [1em]
-                        \sum_{i \in S} c_i \leq CN_{available} \\ [0.5em]\numberthis \label{Equ:MaxProduct} 
-                        \sum_{i \in S} bb\_run_i \leq BB_{available}
+                        x_i \in \{0, 1\}, \forall i \in J_{Q_R} \\ [0.8em]
+                        \sum_{i \in J_{Q_R}} c_i \cdot x_i \leq CN_{available} \\ [0.8em]\numberthis \label{Equ:MaxProduct} 
+                        \sum_{i \in J_{Q_R}} bb\_run_i \cdot x_i \leq BB_{available}
                 \end{array} 
         \right.
 \end{align*}
 where $J_{Q_R}$ is the set of jobs in running queue,
-$S\subseteq J_{Q_R}$ stands for jobs selected by scheduler,
-$CN_{available}$ and $BB_{available}$ represent the amount of system's available resources
-(compute nodes and burst buffer nodes) at current moment.
+$\mathcal{J}  = \{x_i|x_i=1, \text{ } \forall i \in J_{Q_R}\}$ stands for jobs selected by scheduler,
+$CN_{available}$ and $BB_{available}$ represent the amount of system's currently available resources.
+
+As an example, in this paper we measure the value of a job based on how efficient it utilize its resource:
+\begin{equation}
+        v_i = \frac{c_i / CN}{ert_i} \times \frac{bb\_run_i / BB}{ert_i}
+        \label{Equ:DefValue}
+\end{equation}
+where efficiency is measured as the ratio of resource demand to expected running time.
+Specializing Problem 2 using $v_i$ favors tasks that claim to take up resources with short duration.
+%\begin{align*}
+        %& \max \sum_{i \in S}\frac{c_i}{ert_i} * \frac{bb\_run_i}{ert_i} \\
+        %& s.t. \left\{
+                %\begin{array}{l}
+                        %%S \subseteq J_{Q_R} \\ [1em]
+                        %\sum_{i \in S} c_i \leq CN_{available} \\ [0.5em]\numberthis \label{Equ:MaxProduct} 
+                        %\sum_{i \in S} bb\_run_i \leq BB_{available}
+                %\end{array} 
+        %\right.
+%\end{align*}
 
 
 
@@ -454,4 +403,5 @@ The time complexity of solving Algorithm~\ref{Alg:MaxCPU} is $O(n\times CN\times
 % Though targeting on burst buffer enabled systems, 
 % BBSim also supports simulating job scheduling on HPC systems without burst buffer.
 % Besides, it is easy to integrate any scheduling policies into BBsim. 
+
 
