Explain coordination among queues
Signed-off-by: littlepretty@Mac <littlepretty881203@gmail.com>

--- a/intro.tex
+++ b/intro.tex
@@ -87,14 +87,6 @@ bandwidth are significantly improved on the burst buffer enabled system.
 Given its usefulness, we expect user will explicitly request for
 this new resource upon job submission.
 
-\begin{figure}[!t]
-        \centering
-        \includegraphics[width= 3.5in]{BBArchitectureShort}
-        \caption{Trinity System Overview: A Burst Buffer Enabled Supercomputer}
-        \label{Fig:BBArchitecture}
-\end{figure}
-
-
 %===============================================
 
 %4. Our work, a new batch scheduler
@@ -114,8 +106,7 @@ this new resource upon job submission.
 % and makes the optimal scheduling decisions respectively.
 
 %=============XY=================
-In this paper, we propose Cerberus
-\footnote{In Greek mythology,
+In this paper, we propose Cerberus\footnote{In Greek mythology,
 Cerberus is a monstrous 3-headed dog,
 who guards the gates of the underworld. In this paper, we personify our 3-phase batch scheduler
 in the form of this mythological character.
