--- a/experiments.tex
+++ b/experiments.tex
@@ -62,16 +62,24 @@ a fixed time period (500 seconds), measures the performance of the system.
 % Sequential read/write speed of burst buffer nodes is 8.0 GBps.
 % Bandwidth between CPU node and non-burst-buffer IO node is set to 2.5 GBps.
 
-%==============XY===================
-The parameters used in our simulation are inspired and sampled by Trinity~\cite{TrinitySystem}, 
+
+We simulate a burst buffer enabled system as shown in Figure~\ref{Fig:BBArchitecture}.
+This system architecture is inspired by Trinity~\cite{TrinitySystem}, 
 the next generation supercomputer in Los Alamos National Laboratory.
-The simulated system consists of 18,936,
-e.g. 9,436 Intel Haswell nodes
-and at least 9500 Intel Xeon Phi nodes.
+The parameters used in our simulation are taken from their technique report\cite{BBUseCase}.
+The simulated system consists of 18,936 compute nodes,
+e.g. 9436 Intel Haswell nodes and 9500 Intel Xeon Phi nodes.
 There are 576 burst buffer nodes with aggregated 3.7 PB storage capacity, 
 which are globally accessible as intermediate storage.
 Sequential read/write speed of burst buffer nodes is 8.0 GBps.
 Bandwidth between CPU node and IO node is set to 2.5 GBps.
+
+\begin{figure}[!t]
+        \centering
+        \includegraphics[width= 3.5in]{BBArchitectureShort}
+        \caption{Overview of Simulated System: A Burst Buffer Enabled Supercomputer Inspired by Trinity}
+        \label{Fig:BBArchitecture}
+\end{figure}
 
 % % trace
 % Job trace is from ANL's Blue Gene Intrepid system,
@@ -89,7 +97,6 @@ Bandwidth between CPU node and IO node is set to 2.5 GBps.
 % depends on both the model of the jobs and the experiment scenario.
 
 
-%==============XY===================
 Since Trinity is not ready for the time being, there is no Trinity job log available for our study.
 We use the job log collected from ANL's Blue Gene Intrepid system. The log contains 68,936 jobs
 submitted to the system from January to September 2009~\cite{JobTrace}.
