--- a/scheduler.tex
+++ b/scheduler.tex
@@ -8,8 +8,7 @@
         \label{Fig:CerberusQueues}
 \end{figure}
 
-%=======XY======
-\subsection{Cerberus Overview}
+\subsection{Scheduling Process}
 
 The traditional batch scheduler on system without burst buffer only
 takes job size (required number of nodes) and expected runtime into scheduling decision making. 
