--- a/model.tex
+++ b/model.tex
@@ -15,7 +15,7 @@ When users submit their jobs to burst buffer enabled systems, they can specify t
 demand of compute nodes, burst buffer and expected running time for each job.
 The batch scheduler makes scheduling decision for each job based on its demand while trying to 
 minimize overall job response time and maximize system throughput. 
-However, jobs require for more than one resources could result in possible deadlock and starvation.\TODO{cite from OS}
+However, jobs require for more than one resources could result in possible deadlock and starvation.
 In order to improve the overall resource utilization and system responsiveness, we propose
 a fine granularity job model based on the possible usage cases of burst buffer.  
 In our scheduling framework, 
@@ -76,8 +76,8 @@ the job lifetime is divided up to three different phases in our scheduling frame
          into burst buffer at high speed. The burst buffer plays as an efficient
          IO broker for the compute nodes and drain the output data out to the external storage.
 
-While burst buffer has been utilized during all three phases,
-compute nodes are only required during the \textit{running} phase. 
+%While burst buffer has been utilized during all three phases,
+%compute nodes are only required during the \textit{running} phase. 
 
 
 \subsection{Three-Phase Resource Demand Model}
