--- a/experiments.tex
+++ b/experiments.tex
@@ -76,7 +76,7 @@ Bandwidth between CPU node and IO node is set to 2.5 GBps.
 
 \begin{figure}[!t]
         \centering
-        \includegraphics[width= 3.5in]{BBArchitectureShort}
+        \includegraphics[width= 3.5in]{BBArchitecturewithBandwidth}
         \caption{Overview of Simulated System: A Burst Buffer Enabled Supercomputer Inspired by Trinity}
         \label{Fig:BBArchitecture}
 \end{figure}
